tests/import_std_testing_bad.hop
// Verifies std/testing is not a supported library import path.
import "std/testing" { FailingAllocator }

fn main() {
	_ma := FailingAllocator{}
}
